# customer-intelligence-platform

./: .gitignore  READM.md  main.py  pyproject.toml
docs/: PRD.md
